# src/main/java/pl/edu/pwr/tkubik/ism/api/EventsController.java
@@ -4,44 +4,241 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.context.request.NativeWebRequest;
+import pl.edu.pwr.tkubik.ism.model.EventEntity;
+import pl.edu.pwr.tkubik.ism.service.EventRegistrationService;
+import pl.edu.pwr.tkubik.ism.service.EventService;
+import pl.edu.pwr.tkubik.ism.service.EventCreationService;
+import pl.edu.pwr.tkubik.ism.service.OrganizationService;
+import pl.edu.pwr.tkubik.ism.api.EventApi;
 import pl.edu.pwr.tkubik.ism.model.Event;
 
 import java.time.LocalDate;
+import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 
 @RestController
 public class EventsController implements EventApi {
 
     @Autowired
-    private NativeWebRequest nativeWebRequest = null;
+    private EventService eventService;
 
-    @Override
-    public Optional<NativeWebRequest> getRequest() {
-        return Optional.ofNullable(nativeWebRequest);
-    }
+    @Autowired
+    private EventRegistrationService eventRegistrationService;
 
-    // adding parameters inside the signature
-    @Override
-    public ResponseEntity<List<Event>> findAllEvents(Double lat, Double lng, Integer radius, String category, String keyword, LocalDate date) {
-        if (getRequest().isPresent()) {
-            List<Event> eventsList = new ArrayList<>();
+    @Autowired
+    private EventCreationService eventCreationService;
 
-            Event e1 = new Event();
-            e1.setEventId(1L);
-            e1.setTitle("Pottery Workshop");
-            e1.setDate("2026-10-14");
-            e1.setAddress("Nadodrze");
-            e1.setCategory("Crafts");
-            e1.setStatus("Published");
+    @Autowired
+    private OrganizationService organizationService;
 
-            eventsList.add(e1);
+    // private method to convert an Entity (JPA) to a DTO (OpenAPI)
+    private Event convertToDto(EventEntity entity) {
+        Event dto = new Event();
+        dto.setEventId(entity.getId());
+        dto.setTitle(entity.getTitle());
 
-            return new ResponseEntity<>(eventsList, HttpStatus.OK);
+        // convert LocalDate (DB) to String (DTO)
+        if (entity.getDate() != null) {
+            dto.setDate(entity.getDate().toString());
         }
 
-        return EventApi.super.findAllEvents(lat, lng, radius, category, keyword, date);
+        // Convert LocalTime (DB) to String (DTO)
+        if (entity.getTime() != null) {
+            dto.setTime(entity.getTime().toString());
+        }
+
+        dto.setAddress(entity.getAddress());
+        dto.setCategory(entity.getCategory());
+        dto.setPrice(entity.getPrice());
+        dto.setNumberOfPlaces(entity.getNumberOfPlaces());
+        dto.setType(entity.getType());
+        dto.setStatus(entity.getStatus());
+
+        return dto;
+    }
+
+    // POST /events
+    @Override
+    public ResponseEntity<Event> addEvent(Event eventDto) {
+        // database Entity instance
+        EventEntity entity = new EventEntity();
+
+        // mappin DTO to Entity
+        entity.setTitle(eventDto.getTitle());
+
+        if (eventDto.getDate() != null) {
+            entity.setDate(LocalDate.parse(eventDto.getDate()));
+        }
+
+        if (eventDto.getTime() != null) {
+            entity.setTime(LocalTime.parse(eventDto.getTime()));
+        }
+
+        entity.setAddress(eventDto.getAddress());
+        entity.setCategory(eventDto.getCategory());
+        entity.setPrice(eventDto.getPrice());
+        entity.setNumberOfPlaces(eventDto.getNumberOfPlaces());
+        entity.setType(eventDto.getType());
+        entity.setStatus(eventDto.getStatus());
+
+        // call the service to save the event in the DB
+        EventEntity savedEntity = eventService.addEvent(entity);
+
+        // creating the link in the even_creations table
+
+        // we suppose by default that organization with ID=1 create this event
+        pl.edu.pwr.tkubik.ism.model.OrganizationEntity dummyOrg = new pl.edu.pwr.tkubik.ism.model.OrganizationEntity();
+        dummyOrg.setId(1L);
+
+        // creating the link
+        pl.edu.pwr.tkubik.ism.model.EventCreation creation = new pl.edu.pwr.tkubik.ism.model.EventCreation();
+        creation.setEvent(savedEntity);
+        creation.setOrganization(dummyOrg);
+        creation.setDateCreation(LocalDate.now());
+
+        // save the link in DB
+        eventCreationService.addCreation(creation);
+
+        // retrieve the ID generated by the DB and set it in the DTO
+        eventDto.setEventId(savedEntity.getId());
+
+        // return the final DTO with the 200 HTTP status
+        return new ResponseEntity<>(eventDto, HttpStatus.OK);
+    }
+
+    // POST /events/{eventId}/organizations/{orgId}
+    @Override
+    public ResponseEntity<Event> addOrganizationToEvent(Long eventId, Long orgId) {
+
+        // check if the event exists
+        EventEntity event = eventService.findEventById(eventId);
+        if (event == null) {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        }
+
+        // check if the organization exists
+        pl.edu.pwr.tkubik.ism.model.OrganizationEntity organization = organizationService.findOrganizationById(orgId);
+        if (organization == null) {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        }
+
+        // create the new link in the table "event_creations"
+        pl.edu.pwr.tkubik.ism.model.EventCreation creation = new pl.edu.pwr.tkubik.ism.model.EventCreation();
+        creation.setEvent(event);
+        creation.setOrganization(organization);
+        creation.setDateCreation(LocalDate.now());
+
+        // save in DB
+        eventCreationService.addCreation(creation);
+
+        // return the event to confirm
+        return new ResponseEntity<>(convertToDto(event), HttpStatus.OK);
+    }
+
+    // GET /events
+    @Override
+    public ResponseEntity<List<Event>> findAllEvents(Double lat, Double lng, Integer radius, String category, String keyword, LocalDate date) {
+        List<EventEntity> entities = eventService.findAllEvents();
+
+        List<Event> dtos = new ArrayList<>();
+        entities.forEach(entity -> dtos.add(convertToDto(entity)));
+
+        return new ResponseEntity<>(dtos, HttpStatus.OK);
+    }
+
+    // GET /events/{eventId}
+    @Override
+    public ResponseEntity<Event> findEventById(Long eventId) {
+        EventEntity entity = eventService.findEventById(eventId);
+
+        if (entity == null) {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        }
+
+        return new ResponseEntity<>(convertToDto(entity), HttpStatus.OK);
+    }
+
+    // PUT /events
+    @Override
+    public ResponseEntity<Event> updateEvent(Event eventDto) {
+        if (eventDto.getEventId() == null) {
+            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+        }
+
+        EventEntity existingEntity = eventService.findEventById(eventDto.getEventId());
+
+        if (existingEntity == null) {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        }
+
+        existingEntity.setTitle(eventDto.getTitle());
+
+        if (eventDto.getDate() != null) {
+            existingEntity.setDate(LocalDate.parse(eventDto.getDate()));
+        }
+
+        // Convert String (DTO) to LocalTime (DB)
+        if (eventDto.getTime() != null) {
+            existingEntity.setTime(LocalTime.parse(eventDto.getTime()));
+        }
+
+        existingEntity.setAddress(eventDto.getAddress());
+        existingEntity.setCategory(eventDto.getCategory());
+        existingEntity.setPrice(eventDto.getPrice());
+        existingEntity.setNumberOfPlaces(eventDto.getNumberOfPlaces());
+        existingEntity.setType(eventDto.getType());
+        existingEntity.setStatus(eventDto.getStatus());
+
+        EventEntity updatedEntity = eventService.addEvent(existingEntity);
+
+        return new ResponseEntity<>(convertToDto(updatedEntity), HttpStatus.OK);
+    }
+
+    // DELETE /events/{eventId}
+    @Override
+    public ResponseEntity<Event> deleteEventById(Long eventId) {
+        EventEntity existingEntity = eventService.findEventById(eventId);
+
+        if (existingEntity == null) {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        }
+
+        eventService.deleteEventById(eventId);
+
+        return new ResponseEntity<>(convertToDto(existingEntity), HttpStatus.OK);
+    }
+
+    // POST /events/{eventId}/tickets
+    @Override
+    public ResponseEntity<Event> registerForEvent(Long eventId, String body) {
+        // check if the event exists
+        EventEntity event = eventService.findEventById(eventId);
+
+        if (event == null) {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND); // Erreur 404
+        }
+
+        // we suppose by default that we use the user with ID=1
+        pl.edu.pwr.tkubik.ism.model.UserEntity dummyUser = new pl.edu.pwr.tkubik.ism.model.UserEntity();
+        dummyUser.setId(1L);
+
+        // create the link
+        pl.edu.pwr.tkubik.ism.model.EventRegistration registration = new pl.edu.pwr.tkubik.ism.model.EventRegistration();
+        registration.setEvent(event);
+        registration.setUser(dummyUser);
+        registration.setDateRegistration(LocalDate.now());
+
+        // save the link in the table "event_registrations"
+        eventRegistrationService.addRegistration(registration);
+
+        // we return the event to confirm and the HTTPO status ok
+        return new ResponseEntity<>(convertToDto(event), HttpStatus.OK);
+    }
+
+    // PUT /tickets/{ticketId}/scan
+    @Override
+    public ResponseEntity<Event> scanTicket(String ticketId, String body) {
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
     }
 }
